package dal;

// This is the data provider class for report database actions
public class ReportDataProvider {

    // This is the method that displays a placeholder for weekly report generation
    public void generateWeeklyReport() {

        // This is printing the report header
        System.out.println("\n=== Weekly Manager Report ===");

        // This is displaying a placeholder message until the weekly report workflow is fully implemented
        System.out.println("Weekly report workflow is not fully implemented yet.");
    }
}